# solo6-155

./: cb_cli.py  cb_search.py  cb_service.py  cb_store.py  cb_watcher.py  pyproject.toml  requirements.txt
cb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
